update cv.html, cv.css: refactoring using BEM naming conventions(probably?). add 1 new experience.

--- a/cv.html
+++ b/cv.html
@@ -10,172 +10,178 @@
 </head>
 
 <body>
-    <section data-role="general">
-        <h1 data-role="name">Shi Yuchen</h1>
-        <ul data-role="other">
-            <li data-role="mail"><a href="mailto: aiifabbf@outlook.com">aiifabbf@outlook.com</a></li>
+    <section class="general">
+        <h1 class="general__name">Shi Yuchen</h1>
+        <ul class="general__other">
+            <li class="mail"><a href="mailto: aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li>
         </ul>
     </section>
 
-    <section data-role="education">
+    <section>
         <h1>Education</h1>
-        <ul data-role="degrees">
-            <li>
-                <span data-role="interval">2015-<br>2019</span>
-                <span data-role="detail">Bachelor major in Integrated Circuit Design and Integrated System (honor), <br>in
+        <ul class="list list--bare">
+            <li class="event">
+                <span class="event__interval">2015-<br>2019</span>
+                <span class="event__detail">Bachelor major in Integrated Circuit Design and Integrated System (honor), <br>in
                     Huazhong University of Science and Technology, Wuhan, China, <br>with current weighted average
                     <strong>89.1/100</strong> and GPA 3.89/4.00.</span>
             </li>
         </ul>
         <h2>main courses</h2>
-        <ul data-role="courses">
-            <li>
-                <span data-role="name">CMOS Analog Integrated Circuits I</span>
-                <span data-role="score">98</span>
+        <ul class="courses">
+            <li class="course">
+                <span class="course__name">CMOS Analog Integrated Circuits I</span>
+                <span class="course__score">98</span>
             </li>
-            <li>
-                <span data-role="name">CMOS Analog Integrated Circuits II</span>
-                <span data-role="score">98</span>
+            <li class="course">
+                <span class="course__name">CMOS Analog Integrated Circuits II</span>
+                <span class="course__score">98</span>
             </li>
-            <li>
-                <span data-role="name">Fundamentals of Digital Integrated Circuits</span>
-                <span data-role="score">97</span>
+            <li class="course">
+                <span class="course__name">Fundamentals of Digital Integrated Circuits</span>
+                <span class="course__score">97</span>
             </li>
-            <li>
-                <span data-role="name">Computer Organization and Architecture</span>
-                <span data-role="score">94</span>
+            <li class="course">
+                <span class="course__name">Computer Organization and Architecture</span>
+                <span class="course__score">94</span>
             </li>
-            <li>
-                <span data-role="name">Digital Signal Processing</span>
-                <span data-role="score">96</span>
+            <li class="course">
+                <span class="course__name">Digital Signal Processing</span>
+                <span class="course__score">96</span>
             </li>
-            <li>
-                <span data-role="name">Fundamentals of High Frequency Circuit</span>
-                <span data-role="score">99</span>
+            <li class="course">
+                <span class="course__name">Fundamentals of High Frequency Circuit</span>
+                <span class="course__score">99</span>
             </li>
-            <li>
-                <span data-role="name">Signals and Linear System</span>
-                <span data-role="score">98</span>
+            <li class="course">
+                <span class="course__name">Signals and Linear System</span>
+                <span class="course__score">98</span>
             </li>
         </ul>
     </section>
 
-    <section data-role="experiences">
+    <section>
         <h1>Experiences</h1>
-        <ul data-role="experiences">
-            <li>
-                <span data-role="interval">Oct 2017-</span>
-                <span data-role="detail">
+        <ul class="list list--bare">
+            <li class="event event--highlighted">
+                <span class="event__interval">Oct 2017-</span>
+                <span class="event__detail">
                     Undergraduate research on spectrum analysis of photoacoustic imaging, at Prof. Benpeng Zhu’s,
                     College of Optical and Electronic Information, HUST. A nation-financed project.
-                    <ul data-role="tasks">
+                    <ul class="tasks">
                         <li>image preprocessing: noise filter, transform and normalization</li>
                         <li>statistical feature extraction, image discretization and reconstruction</li>
                         <li>code optimization, refactoring and language migration from Matlab to Python</li>
                     </ul>
                 </span>
             </li>
-            <li>
-                <span data-role="interval">Mar 2018-</span>
-                <span data-role="detail">
+            <li class="event event--highlighted">
+                <span class="event__interval">Mar 2018-</span>
+                <span class="event__detail">
                     Undergraduate research on high thermal conductivity and high permittivity film, at Prof. Qiuyun
                     Fu’s, College of Optical and Electronic Information, HUST.
-                    <ul data-role="tasks">
+                    <ul class="tasks">
                         <li>numeric simulation on the temperature field and its evolution through time</li>
                         <li>dynamic data visualization</li>
                     </ul>
                 </span>
             </li>
-            <li>
-                <span data-role="interval">Feb 2017-<br>Oct 2017</span>
-                <span data-role="detail">
+            <li class="event event--highlighted">
+                <span class="event__interval">Feb 2017-<br>Oct 2017</span>
+                <span class="event__detail">
                     Undergraduate research on hybrid-supply modulator and two-stage analog amplifiers, at Prof. Min
                     Tan’s, College of Optical and Electronic Information, HUST.
-                    <ul data-role="tasks">
+                    <ul class="tasks">
                         <li>symbolic small-signal analysis of two-stage amplifiers: transfer function and stability
                             concerns</li>
                         <li>schematic simulation to verify manual analysis</li>
                     </ul>
                 </span>
             </li>
-            <li>
-                <span data-role="interval">Jan 2018</span>
-                <span data-role="detail">
+            <li class="event event--highlighted">
+                <span class="event__interval">Sep 2016-</span>
+                <span class="event__detail">
+                    Web front-end engineer, Students' Association Union of HUST.
+                </span>
+            </li>
+            <li class="event event--highlighted">
+                <span class="event__interval">Jan 2018</span>
+                <span class="event__detail">
                     Volunteer as a Teaching Assistant at EF Education First Ltd.
                 </span>
             </li>
-            <li>
-                <span data-role="interval">Aug 2016</span>
-                <span data-role="detail">
+            <li class="event event--highlighted">
+                <span class="event__interval">Aug 2016</span>
+                <span class="event__detail">
                     Summer session on <i>Perspectives in the Humanities</i>, University of California, Berkeley.
                 </span>
             </li>
         </ul>
     </section>
 
-    <section data-role="awards">
+    <section>
         <h1>Awards</h1>
-        <ul>
-            <li>
-                <span data-role="interval">Apr 2018-<br>Aug 2018</span>
-                <span data-role="detail">
-                    National College IC Design Contest, on 28-39 GHz phase-locked loop, 2<sup>nd</sup> prize.
+        <ul class="list list--bare">
+            <li class="event">
+                <span class="event__interval">Aug 2018</span>
+                <span class="event__detail">
+                    National College IC Design Contest on 28-39 GHz phase-locked loop, 2<sup>nd</sup> prize.
                 </span>
             </li>
-            <li>
-                <span data-role="interval">Apr 2018</span>
-                <span data-role="detail">
+            <li class="event">
+                <span class="event__interval">Apr 2018</span>
+                <span class="event__detail">
                     Mathematical Modeling Contest in Middle China, 3<sup>rd</sup> prize.
                 </span>
             </li>
-            <li>
-                <span data-role="interval">Sep 2016</span>
-                <span data-role="detail">
+            <li class="event">
+                <span class="event__interval">Sep 2016</span>
+                <span class="event__detail">
                     Advances in Academics Scholarship, College of Optical and Electronic Information, HUST, ?/?.
                 </span>
             </li>
         </ul>
     </section>
 
-    <section data-role="skills">
+    <section>
         <h1>Skills</h1>
-        <ul data-role="skills">
-            <li>
-                <h2>Programming Languages</h2>
-                <ul>
+        <ul class="list list--bare list--columned">
+            <li class="skill">
+                <h2 class="skill__category">Programming Languages</h2>
+                <ul class="skill__list">
                     <li>Python, C, JavaScript</li>
                     <li>LaTeX, TeX, HTML, CSS</li>
                 </ul>
             </li>
-            <li>
-                <h2>Scientific Computing in Python</h2>
-                <ul>
+            <li class="skill">
+                <h2 class="skill__category">Scientific Computing in Python</h2>
+                <ul class="skill__list">
                     <li>Data manipulation with Numpy, Scipy and Pandas</li>
                     <li>Data visualization with Matplotlib</li>
                     <li>Parallel and distributed computing</li>
                 </ul>
             </li>
-            <li>
-                <h2>VLSI Design</h2>
-                <ul>
+            <li class="skill">
+                <h2 class="skill__category">VLSI Design</h2>
+                <ul class="skill__list">
                     <li>Schematic simulation with Cadence Virtuoso</li>
                     <li>Digital system construction and verification with Verilog on FPGAs</li>
                 </ul>
             </li>
-            <li>
-                <h2>Languages</h2>
-                <ul>
-                    <li>
-                        <span data-role="interval">Aug 2018</span>
-                        <span data-role="detail">GRE 323, 4.0</span>
+            <li class="skill">
+                <h2 class="skill__category">Languages</h2>
+                <ul class="skill__list">
+                    <li class="event event--compact">
+                        <span class="event__interval">Aug 2018</span>
+                        <span class="event__detail">GRE 323, 4.0</span>
                     </li>
-                    <li>
-                        <span data-role="interval">Aug 2017</span>
-                        <span data-role="detail">TOEFL 107</span>
+                    <li class="event event--compact">
+                        <span class="event__interval">Aug 2017</span>
+                        <span class="event__detail">TOEFL 107</span>
                     </li>
-                    <li>
-                        <span data-role="interval">Aug 2013</span>
-                        <span data-role="detail">IELTS 7.0</span>
+                    <li class="event event--compact">
+                        <span class="event__interval">Aug 2013</span>
+                        <span class="event__detail">IELTS 7.0</span>
                     </li>
                 </ul>
             </li>
