--- a/cv.html
+++ b/cv.html
@@ -14,6 +14,7 @@
         <h1 class="general__name">Shi Yuchen</h1>
         <ul class="general__other">
             <li class="mail"><a href="mailto: aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li>
+            <li class="site"><a href="https://github.com/aiifabbf" class="site__link">github.com/aiifabbf</a></li>
         </ul>
     </section>
 
@@ -26,13 +27,15 @@
                     Huazhong University of Science and Technology, Wuhan, China, <br>with current weighted average
                     <strong>89.1/100</strong> and GPA 3.89/4.00.</span>
             </li>
-        </ul>
-        <h2>main courses</h2>
-        <ul class="courses">
-            <li class="course">
-                <span class="course__name">CMOS Analog Integrated Circuits I</span>
-                <span class="course__score">98</span>
+            <li class="event">
+                <span class="event__interval">Aug 2016</span>
+                <span class="event__detail">
+                    Summer session on <i>Perspectives in the Humanities</i>, University of California, Berkeley.
+                </span>
             </li>
+        </ul>
+        <!-- <h2>Main Courses</h2>
+        <ul class="courses">
             <li class="course">
                 <span class="course__name">CMOS Analog Integrated Circuits II</span>
                 <span class="course__score">98</span>
@@ -57,7 +60,8 @@
                 <span class="course__name">Signals and Linear System</span>
                 <span class="course__score">98</span>
             </li>
-        </ul>
+        </ul> -->
+        
     </section>
 
     <section>
@@ -66,24 +70,28 @@
             <li class="event event--highlighted">
                 <span class="event__interval">Oct 2017-</span>
                 <span class="event__detail">
-                    Undergraduate research on spectrum analysis of photoacoustic imaging, at Prof. Benpeng Zhu’s,
-                    College of Optical and Electronic Information, HUST. A nation-financed project.
-                    <ul class="tasks">
-                        <li>image preprocessing: noise filter, transform and normalization</li>
-                        <li>statistical feature extraction, image discretization and reconstruction</li>
-                        <li>code optimization, refactoring and language migration from Matlab to Python</li>
-                    </ul>
+                    <a href="https://aiifabbf.github.io/cv/lab-zhu" class="href">
+                        Undergraduate research on spectrum analysis of photoacoustic imaging, at Prof. Benpeng Zhu’s,
+                        College of Optical and Electronic Information, HUST. A nation-financed project.
+                        <ul class="tasks">
+                            <li>image preprocessing: noise filter, transform and normalization</li>
+                            <li>statistical feature extraction, image discretization and reconstruction</li>
+                            <li>code optimization, refactoring and language migration from Matlab to Python</li>
+                        </ul>
+                    </a>
                 </span>
             </li>
             <li class="event event--highlighted">
                 <span class="event__interval">Mar 2018-</span>
                 <span class="event__detail">
-                    Undergraduate research on high thermal conductivity and high permittivity film, at Prof. Qiuyun
-                    Fu’s, College of Optical and Electronic Information, HUST.
-                    <ul class="tasks">
-                        <li>numeric simulation on the temperature field and its evolution through time</li>
-                        <li>dynamic data visualization</li>
-                    </ul>
+                    <a href="https://aiifabbf.github.io/cv/lab-fu" class="href">
+                        Undergraduate research on high thermal conductivity and high permittivity film, at Prof. Qiuyun
+                        Fu’s, College of Optical and Electronic Information, HUST.
+                        <ul class="tasks">
+                            <li>numeric simulation on the temperature field and its evolution through time</li>
+                            <li>dynamic data visualization</li>
+                        </ul>
+                    </a>
                 </span>
             </li>
             <li class="event event--highlighted">
@@ -101,7 +109,11 @@
             <li class="event event--highlighted">
                 <span class="event__interval">Sep 2016-</span>
                 <span class="event__detail">
-                    Web front-end engineer, Students' Association Union of HUST.
+                    Web engineer, Students' Association Union of HUST.
+                    <ul class="tasks">
+                        <li>Full client-side rendering, single-page application using Vue.js</li>
+                        <li>RESTful API design and implementation using Flask and SQLAlchemy</li>
+                    </ul>
                 </span>
             </li>
             <li class="event event--highlighted">
@@ -111,9 +123,10 @@
                 </span>
             </li>
             <li class="event event--highlighted">
-                <span class="event__interval">Aug 2016</span>
+                <span class="event__interval">Jul 2018</span>
                 <span class="event__detail">
-                    Summer session on <i>Perspectives in the Humanities</i>, University of California, Berkeley.
+                    Summer camp at 
+                    Shanghai Institute of Microsystem and Information Technology
                 </span>
             </li>
         </ul>
@@ -125,19 +138,19 @@
             <li class="event">
                 <span class="event__interval">Aug 2018</span>
                 <span class="event__detail">
-                    National College IC Design Contest on 28-39 GHz phase-locked loop, 2<sup>nd</sup> prize.
+                    National College IC Design Contest on 28-39 GHz phase-locked loop, 2nd prize.
                 </span>
             </li>
             <li class="event">
                 <span class="event__interval">Apr 2018</span>
                 <span class="event__detail">
-                    Mathematical Modeling Contest in Middle China, 3<sup>rd</sup> prize.
+                    Mathematical Modeling Contest in Middle China, 3rd prize.
                 </span>
             </li>
             <li class="event">
                 <span class="event__interval">Sep 2016</span>
                 <span class="event__detail">
-                    Advances in Academics Scholarship, College of Optical and Electronic Information, HUST, ?/?.
+                    Advances in Academics Scholarship, College of Optical and Electronic Information, HUST.
                 </span>
             </li>
         </ul>
@@ -149,8 +162,8 @@
             <li class="skill">
                 <h2 class="skill__category">Programming Languages</h2>
                 <ul class="skill__list">
-                    <li>Python, C, JavaScript</li>
-                    <li>LaTeX, TeX, HTML, CSS</li>
+                    <li>Python, C, JavaScript, Rust</li>
+                    <li>LaTeX, TeX, SQL, HTML, CSS</li>
                 </ul>
             </li>
             <li class="skill">
@@ -165,7 +178,7 @@
                 <h2 class="skill__category">VLSI Design</h2>
                 <ul class="skill__list">
                     <li>Schematic simulation with Cadence Virtuoso</li>
-                    <li>Digital system construction and verification with Verilog on FPGAs</li>
+                    <li>Digital system construction with Verilog on FPGAs</li>
                 </ul>
             </li>
             <li class="skill">
@@ -186,6 +199,19 @@
                 </ul>
             </li>
         </ul>
+    </section>
+
+    <section>
+        <h1>Publications</h1>
+        <ol class="bibliography">
+            <li class="bibliography__item">
+                <span class="bibliography__item__detail">
+                    <a href="http://oversea.cnki.net/kcms/detail/detail.aspx?recid=&FileName=XYYZ201803009&DbName=CJFDLAST2018&DbCode=CJFD&uid=WEEvREcwSlJHSldRa1FhcEE0RVVzS0gvZW9hamxSZ2VEcWJKMXBDalhPTT0=$9A4hF_YAuvQ5obgVAqNKPCYcEjKensW4IQMovwHtwkF4VYPoHbKxJw!!">
+                        CHEN Yuheng, <strong>SHI Yuchen</strong>, et al., "Discussion on issues and countermeasures for the habitat of sockeye salmon in Cultus Lake," <i>Fishery Information & Strategy, </i>2018.
+                    </a>
+                </span>
+            </li>
+        </ol>
     </section>
 </body>
 
