change email address, add main courses

--- a/cv.html
+++ b/cv.html
@@ -13,9 +13,11 @@
 
 <body>
     <section class="general">
-        <h1 class="general__name">Shi Yuchen</h1>
+        <h1 class="general__name">Yuchen SHI</h1>
         <ul class="general__other">
-            <li class="mail"><a href="mailto: aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li>
+            <!-- <li class="mail"><a href="mailto: aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li> -->
+            <li class="mail"><a href="mailto: yuchenshi2021@u.northwestern.edu"
+                    class="mail__link">yuchenshi2021@u.northwestern.edu</a></li>
             <li class="site"><a href="https://github.com/aiifabbf" class="site__link">github.com/aiifabbf</a></li>
         </ul>
     </section>
@@ -40,9 +42,9 @@
                 </span>
             </li> -->
         </ul>
-        <!-- <h2>Main Courses</h2>
+        <h2>Main Courses</h2>
         <ul class="courses">
-            <li class="course">
+            <!-- <li class="course">
                 <span class="course__name">CMOS Analog Integrated Circuits II</span>
                 <span class="course__score">98</span>
             </li>
@@ -65,8 +67,20 @@
             <li class="course">
                 <span class="course__name">Signals and Linear System</span>
                 <span class="course__score">98</span>
+            </li> -->
+            <li class="course">
+                <span class="course__name">Design of Algorithms</span>
             </li>
-        </ul> -->
+            <li class="course">
+                <span class="course__name">Introduction to Databases</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Computer Graphics</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Machine Learning</span>
+            </li>
+        </ul>
 
     </section>
 
@@ -87,6 +101,21 @@
                 </span>
             </li>
             <li class="event event--highlighted">
+                <span class="event__interval">Oct 2018-<br>Mar 2019</span>
+                <span class="event__detail">
+                    Project on analog circuit design automation and EDA tools, <br>under supervision of Prof. Min
+                    Tan, College of Optical and Electronic Information, HUST.
+                    <ul class="tasks">
+                        <li>Build tools in Python to analyze waves and results from simulators in real time (~50 μs)
+                        </li>
+                        <li>Verify effectiveness on 9 modern two-stage amplifiers</li>
+                        <li>Make it a lightweight framework* for future use</li>
+                    </ul>
+                    * sizer: <a href="http://github.com/aiifabbf/sizer"><span
+                            class="mail__link">http://github.com/aiifabbf/sizer</span></a>
+                </span>
+            </li>
+            <li class="event event--highlighted">
                 <span class="event__interval">Oct 2017-<br>Apr 2019</span>
                 <span class="event__detail">
                     <a href="https://aiifabbf.github.io/cv/lab-zhu" class="href">
@@ -104,26 +133,6 @@
                 </span>
             </li>
             <li class="event event--highlighted">
-                <span class="event__interval">Oct 2018-<br>Mar 2019</span>
-                <span class="event__detail">
-                    Project on analog circuit design automation and EDA tools, <br>under supervision of Prof. Min
-                    Tan, College of Optical and Electronic Information, HUST.
-                    <ul class="tasks">
-                        <li>Build tools in Python to
-                            <ul>
-                                <li>parse circuit netlist files</li>
-                                <li>generate simulation commands and call simulators</li>
-                                <li>analyze waves and results from simulators in real time (~50 μs)</li>
-                                <li>approach towards optimal parameters using Scipy</li>
-                            </ul>
-                        </li>
-                        <li>Verify effectiveness on 9 modern two-stage amplifiers</li>
-                        <li>Make it a lightweight framework* for future use</li>
-                    </ul>
-                    * sizer: <a href="http://github.com/aiifabbf/sizer"><span class="mail__link">http://github.com/aiifabbf/sizer</span></a>
-                </span>
-            </li>
-            <li class="event event--highlighted">
                 <span class="event__interval">Mar 2018-<br>Apr 2019</span>
                 <span class="event__detail">
                     <a href="https://aiifabbf.github.io/cv/lab-fu" class="href">
@@ -135,7 +144,8 @@
                             <li>Animated 2D and 3D visualization of temperature field through time*</li>
                             <li>Co-authored paper under review</li>
                         </ul>
-                        * Jupyter notebook demo: <a href="https://aiifabbf.github.io/cv/lab-fu/"><span class="mail__link">https://aiifabbf.github.io/cv/lab-fu/</span></a>
+                        * Jupyter notebook demo: <a href="https://aiifabbf.github.io/cv/lab-fu/"><span
+                                class="mail__link">https://aiifabbf.github.io/cv/lab-fu/</span></a>
                     </a>
                 </span>
             </li>
@@ -171,21 +181,21 @@
         <h1>Awards</h1>
         <ul class="list list--bare">
             <li class="event">
+                <span class="event__interval">Aug 2018</span>
+                <span class="event__detail">
+                    National College Integrated Circuit Design Contest on 28-39 GHz phase-locked loop, 2nd prize.
+                </span>
+            </li>
+            <li class="event">
                 <span class="event__interval">Sep 2016</span>
                 <span class="event__detail">
                     Scholarship for Excellence in Academics, College of Optical and Electronic Information, HUST.
                 </span>
             </li>
-            <!-- <li class="event">
+            <li class="event">
                 <span class="event__interval">Apr 2018</span>
                 <span class="event__detail">
                     Mathematical Modeling Contest in Middle China, 3rd prize.
-                </span>
-            </li> -->
-            <li class="event">
-                <span class="event__interval">Aug 2018</span>
-                <span class="event__detail">
-                    National College Integrated Circuit Design Contest on 28-39 GHz phase-locked loop, 2nd prize.
                 </span>
             </li>
         </ul>
@@ -197,8 +207,8 @@
             <li class="skill">
                 <h2 class="skill__category">Programming Languages</h2>
                 <ul class="skill__list">
-                    <li>Python, C, JavaScript, Java, Rust</li>
-                    <li>LaTeX, TeX, SQL, HTML, CSS</li>
+                    <li>Proficient in Python, C, JavaScript</li>
+                    <li>Knowledge of Java, TypeScript, Rust</li>
                     <li>Leetcode weekly contest enthusiast (top 5%)</li>
                 </ul>
             </li>
