--- a/cv.html
+++ b/cv.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Shi Yuchen</title>
+    <title>Yuchen SHI</title>
     <link rel="stylesheet" href="cv.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.rawgit.com/dreampulse/computer-modern-web-font/master/fonts.css">
@@ -16,9 +16,11 @@
         <h1 class="general__name">Yuchen SHI</h1>
         <ul class="general__other">
             <!-- <li class="mail"><a href="mailto: aiifabbf@outlook.com" class="mail__link">aiifabbf@outlook.com</a></li> -->
-            <li class="mail"><a href="mailto: yuchenshi2021@u.northwestern.edu"
+            <li class="mail"><a href="mailto:yuchenshi2021@u.northwestern.edu"
                     class="mail__link">yuchenshi2021@u.northwestern.edu</a></li>
             <li class="site"><a href="https://github.com/aiifabbf" class="site__link">github.com/aiifabbf</a></li>
+            <li class="phone">+1 773 273 1231</li>
+            <li class="address">1930 Ridge Ave, Evanston IL, 60201</li>
         </ul>
     </section>
 
@@ -27,12 +29,13 @@
         <ul class="list list--bare">
             <li class="event">
                 <span class="event__interval">Sep 2019-<br></span>
-                <span class="event__detail">Master of Science in Computer Engineering, <br>in
-                    Northwestern University, Evanston, IL, US</span>
+                <span class="event__detail">Master of Science in Computer Engineering, GPA 3.75/4.00<br>
+                    Northwestern University, Evanston IL, US</span>
             </li>
             <li class="event">
                 <span class="event__interval">Sep 2015-<br>Jun 2019</span>
-                <span class="event__detail">Bachelor major in Integrated Circuit Design and Integrated System, <br>in
+                <span class="event__detail">Bachelor in Integrated Circuit Design and Integrated System, GPA
+                    3.91/4.00<br>
                     Huazhong University of Science and Technology, Wuhan, China</span>
             </li>
             <!-- <li class="event">
@@ -69,16 +72,36 @@
                 <span class="course__score">98</span>
             </li> -->
             <li class="course">
-                <span class="course__name">Design of Algorithms</span>
-            </li>
-            <li class="course">
-                <span class="course__name">Introduction to Databases</span>
-            </li>
-            <li class="course">
                 <span class="course__name">Computer Graphics</span>
+                <span class="course__score">A</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Database Systems</span>
+                <span class="course__score">A</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Design of Algorithms</span>
+                <span class="course__score">B</span>
             </li>
             <li class="course">
                 <span class="course__name">Machine Learning</span>
+                <span class="course__score">A</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Operating Systems</span>
+                <span class="course__score">-</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Compilers</span>
+                <span class="course__score">-</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Computer Networks</span>
+                <span class="course__score">-</span>
+            </li>
+            <li class="course">
+                <span class="course__name">Deep Learning</span>
+                <span class="course__score">-</span>
             </li>
         </ul>
 
@@ -90,63 +113,16 @@
             <li class="event event--highlighted">
                 <span class="event__interval">Sep 2016-<br>May 2019</span>
                 <span class="event__detail">
-                    Web developer, Students' Association Union of HUST.
+                    Web front-end developer, Students' Association Union of HUST.
                     <ul class="tasks">
                         <li>Design and code for union's administration dashboard frontend serving 100+ union members
                         </li>
-                        <li>Full client-side rendering, full AJAX, single-page application using Vue.js and Page.js</li>
+                        <li>Full <strong>client-side rendering</strong>, full AJAX, responsive single-page application
+                            using
+                            <strong>Vue.js</strong>, Page.js</li>
                         <li>RESTful API design and implementation using Flask and SQLAlchemy, <br>cooperatively with
                             backend developers</li>
                     </ul>
-                </span>
-            </li>
-            <li class="event event--highlighted">
-                <span class="event__interval">Oct 2018-<br>Mar 2019</span>
-                <span class="event__detail">
-                    Project on analog circuit design automation and EDA tools, <br>under supervision of Prof. Min
-                    Tan, College of Optical and Electronic Information, HUST.
-                    <ul class="tasks">
-                        <li>Build tools in Python to analyze waves and results from simulators in real time (~50 μs)
-                        </li>
-                        <li>Verify effectiveness on 9 modern two-stage amplifiers</li>
-                        <li>Make it a lightweight framework* for future use</li>
-                    </ul>
-                    * sizer: <a href="http://github.com/aiifabbf/sizer"><span
-                            class="mail__link">http://github.com/aiifabbf/sizer</span></a>
-                </span>
-            </li>
-            <li class="event event--highlighted">
-                <span class="event__interval">Oct 2017-<br>Apr 2019</span>
-                <span class="event__detail">
-                    <a href="https://aiifabbf.github.io/cv/lab-zhu" class="href">
-                        Undergraduate research on spectrum analysis of photoacoustic imaging, A nation-financed project,
-                        <br>under supervision of Prof. Benpeng Zhu,
-                        College of Optical and Electronic Information, HUST.
-                        <ul class="tasks">
-                            <!-- <li>Code for image preprocessing: noise filter, transform and normalization</li>
-                            <li>Code for statistical feature extraction, image discretization and reconstruction</li> -->
-                            <li>Code for automated image processing and statistical feature extraction</li>
-                            <li>10x speed up with parallel and vectorized computing</li>
-                            <li>Migrate codebase from Matlab to Python</li>
-                        </ul>
-                    </a>
-                </span>
-            </li>
-            <li class="event event--highlighted">
-                <span class="event__interval">Mar 2018-<br>Apr 2019</span>
-                <span class="event__detail">
-                    <a href="https://aiifabbf.github.io/cv/lab-fu" class="href">
-                        Undergraduate research on high thermal conductivity and high permittivity film, <br>under
-                        supervision of Prof. Qiuyun
-                        Fu, College of Optical and Electronic Information, HUST.
-                        <ul class="tasks">
-                            <li>Home-made code for numeric simulation on temperature field</li>
-                            <li>Animated 2D and 3D visualization of temperature field through time*</li>
-                            <li>Co-authored paper under review</li>
-                        </ul>
-                        * Jupyter notebook demo: <a href="https://aiifabbf.github.io/cv/lab-fu/"><span
-                                class="mail__link">https://aiifabbf.github.io/cv/lab-fu/</span></a>
-                    </a>
                 </span>
             </li>
             <!-- <li class="event event--highlighted">
@@ -164,7 +140,7 @@
             <li class="event event--highlighted">
                 <span class="event__interval">Jan 2018</span>
                 <span class="event__detail">
-                    Volunteer as a Teaching Assistant at EF Education First Ltd.
+                    Volunteer as an English Teaching Assistant at EF Education First Ltd.
                 </span>
             </li>
             <!-- <li class="event event--highlighted">
@@ -177,7 +153,7 @@
         </ul>
     </section>
 
-    <section>
+    <!-- <section>
         <h1>Awards</h1>
         <ul class="list list--bare">
             <li class="event">
@@ -199,27 +175,107 @@
                 </span>
             </li>
         </ul>
+    </section> -->
+
+    <section>
+        <h1>Projects</h1>
+        <ul class="list list--bare">
+            <li class="event event--highlighted">
+                <span class="event__interval">Oct 2019</span>
+                <span class="event__detail">
+                    <code>steve</code>, a course project for Computer Graphics
+                    <ul class="tasks">
+                        <li>Home-made naive 3D-engine around WebGL's drawing primitives in TypeScript</li>
+                        <li>GLSL shader coding for Phong, Gouraud shading model with Phong, Blinn-Phong lighting method
+                        </li>
+                        <li>Frame-rate-independent animations with customizable Bezier-curved timing functions</li>
+                    </ul>
+                    <!-- * Repository: <a href="http://github.com/aiifabbf/steve">http://github.com/aiifabbf/steve</a> -->
+                </span>
+            </li>
+            <li class="event event--highlighted">
+                <span class="event__interval">Oct 2018-<br>Mar 2019</span>
+                <span class="event__detail">
+                    Project on analog circuit design automation and EDA tools: <code>sizer</code>.
+                    <!-- <br>under supervision of Prof. Min Tan, College of Optical and Electronic Information, HUST. -->
+                    <ul class="tasks">
+                        <li>Build tools in Python to analyze signals from SPICE simulator in real time (<strong>≈50
+                                μs</strong> per signal)
+                        </li>
+                        <li>Compute optimal parameters for a 10-MOSFET amplifier under <strong>5 min</strong> using
+                            Scipy
+                        </li>
+                        <li>Make it a lightweight framework to easily change circuit diagrams and define constraints
+                        </li>
+                    </ul>
+                    <!-- * Repository: <a href="http://github.com/aiifabbf/sizer"><span
+                            class="mail__link">http://github.com/aiifabbf/sizer</span></a> -->
+                </span>
+            </li>
+            <li class="event event--highlighted">
+                <span class="event__interval">Oct 2017-<br>Apr 2019</span>
+                <span class="event__detail">
+                    Research on spectrum analysis of photoacoustic imaging, A nation-financed project.
+                    <!-- <br>under supervision of Prof. Benpeng Zhu, College of Optical and Electronic Information, HUST. -->
+                    <ul class="tasks">
+                        <!-- <li>Code for image preprocessing: noise filter, transform and normalization</li>
+                            <li>Code for statistical feature extraction, image discretization and reconstruction</li> -->
+                        <li>Code for automated image processing and statistical feature extraction (<strong>≈1.5
+                                min</strong> per image)</li>
+                        <li><strong>10x</strong> speed-up with parallel and vectorized computing compared to original
+                            Matlab code</li>
+                        <li>Migrate 2k-line codebase from Matlab to Python</li>
+                    </ul>
+                </span>
+            </li>
+            <li class="event event--highlighted">
+                <span class="event__interval">Mar 2018-<br>Apr 2019</span>
+                <span class="event__detail">
+                    Research on high thermal conductivity and high permittivity film.
+                    <!-- <br>under supervision of Prof. Qiuyun Fu, College of Optical and Electronic Information, HUST. -->
+                    <ul class="tasks">
+                        <li>Home-made code for finite-element simulation on temperature field using Scipy</li>
+                        <li>Animated 2D and 3D visualization of temperature field through time using Matplotlib</li>
+                        <li>Co-authored paper published <a
+                                href="https://doi.org/10.1016/j.compscitech.2019.107934"><code>doi: 10.1016/j.compscitech.2019.107934</code></a>
+                        </li>
+                    </ul>
+                    <!-- * Jupyter notebook demo: <a href="https://aiifabbf.github.io/cv/lab-fu/"><span
+                            class="mail__link">https://aiifabbf.github.io/cv/lab-fu/</span></a> -->
+                </span>
+            </li>
+            <li class="event">
+                <span class="event__interval">Nov 2019</span>
+                <span class="event__detail event--highlighted">
+                    <code>nu-hub</code>, a course project for Database Systems
+                    <ul class="tasks">
+                        <li>SQL query, trigger, transaction and procedure coding</li>
+                        <li><code>ncurses</code>-based retro-style terminal GUI written in Python</li>
+                    </ul>
+                    <!-- * Repository: <a href="http://github.com/aiifabbf/nu-hub">http://github.com/aiifabbf/nu-hub</a> -->
+                </span>
+            </li>
+        </ul>
     </section>
 
     <section>
         <h1>Skills</h1>
-        <ul class="list list--bare list--columned">
-            <li class="skill">
+        <ul class="list list--columned">
+            <!-- <li class="skill">
                 <h2 class="skill__category">Programming Languages</h2>
-                <ul class="skill__list">
-                    <li>Proficient in Python, C, JavaScript</li>
-                    <li>Knowledge of Java, TypeScript, Rust</li>
-                    <li>Leetcode weekly contest enthusiast (top 5%)</li>
-                </ul>
+                <ul class="skill__list"> -->
+            <li>Proficient in <strong>Python, C, JavaScript, SQL, CSS</strong></li>
+            <li>Knowledge of <strong>Java, TypeScript, Rust</strong></li>
+            <li>Leetcode weekly contest enthusiast (top <strong>5%</strong>)</li>
+            <!-- </ul>
             </li>
             <li class="skill">
                 <h2 class="skill__category">Scientific Computing</h2>
-                <ul class="skill__list">
-                    <li>Data manipulation with Numpy, Scipy and Pandas</li>
-                    <li>Data visualization with Matplotlib</li>
-                    <li>Parallel and distributed computing</li>
-                </ul>
-            </li>
+                <ul class="skill__list"> -->
+            <li>Knowledge of <strong>Flask, SQLAlchemy, Vue.js</strong></li>
+            <li>Proficient in <strong>Numpy, Scipy, Pandas, Matplotlib</strong></li>
+            <!-- </ul> -->
+            <!-- </li> -->
             <!-- <li class="skill">
                 <h2 class="skill__category">VLSI Design</h2>
                 <ul class="skill__list">
@@ -263,7 +319,7 @@
         </ol>
     </section> -->
     <script>
-        window.onload = window.print;
+        // window.onload = window.print;
     </script>
 </body>
 
