add intern, networking project

--- a/cv.html
+++ b/cv.html
@@ -137,10 +137,20 @@
                     </ul>
                 </span>
             </li> -->
-            <li class="event event--highlighted">
+            <!-- <li class="event event--highlighted">
                 <span class="event__interval">Jan 2018</span>
                 <span class="event__detail">
                     Volunteer as an English Teaching Assistant at EF Education First Ltd.
+                </span>
+            </li> -->
+            <li class="event event--highlighted">
+                <span class="event__interval">Jul 2019-<br>Aug 2019</span>
+                <span class="event__detail">
+                    Full-stack developer intern, Epoint, Suzhou, China
+                    <ul class="tasks">
+                        <li>Java programming language and web application tutorial</li>
+                        <li>CSS tuning for end-user products</li>
+                    </ul>
                 </span>
             </li>
             <!-- <li class="event event--highlighted">
@@ -189,6 +199,18 @@
                         <li>GLSL shader coding for Phong, Gouraud shading model with Phong, Blinn-Phong lighting method
                         </li>
                         <li>Frame-rate-independent animations with customizable Bezier-curved timing functions</li>
+                    </ul>
+                    <!-- * Repository: <a href="http://github.com/aiifabbf/steve">http://github.com/aiifabbf/steve</a> -->
+                </span>
+            </li>
+            <li class="event event--highlighted">
+                <span class="event__interval">Jan 2020</span>
+                <span class="event__detail">
+                    <code>simple-tcp</code>, a course project for Computer Networking
+                    <ul class="tasks">
+                        <li>Build TCP-like reliable transport protocol on top of UDP using Python</li>
+                        <li>Optimize using delayed ACKs, packet aggregation, Nagle's algorithm and checksum</li>
+                        <li>Concurrent programmming with background worker threads and locks</li>
                     </ul>
                     <!-- * Repository: <a href="http://github.com/aiifabbf/steve">http://github.com/aiifabbf/steve</a> -->
                 </span>
@@ -265,7 +287,7 @@
                 <h2 class="skill__category">Programming Languages</h2>
                 <ul class="skill__list"> -->
             <li>Proficient in <strong>Python, C, JavaScript, SQL, CSS</strong></li>
-            <li>Knowledge of <strong>Java, TypeScript, Rust</strong></li>
+            <li>Knowledge of <strong>Java, TypeScript, Rust, C++</strong></li>
             <li>Leetcode weekly contest enthusiast (top <strong>5%</strong>)</li>
             <!-- </ul>
             </li>
